--- a/WorkbaseImm/WorkbaseImm.csproj
+++ b/WorkbaseImm/WorkbaseImm.csproj
@@ -44,10 +44,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp, Version=106.5.2.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.106.5.2\lib\net452\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -1409,6 +1413,8 @@
     <Content Include="report\_reportListCusSaleReback.aspx" />
     <Content Include="report\_reportListCusSaleReDelete.aspx" />
     <Content Include="report\_reportTeamSaleIsBlocked.aspx" />
+    <Content Include="setting\_menu.aspx" />
+    <Content Include="setting\_menuPermission.aspx" />
     <Content Include="user\_dashboardChangePassword.aspx" />
     <Content Include="user\_dashboardEditInfo.aspx" />
     <Content Include="user\_dashboardForgetPassword.aspx" />
@@ -1726,6 +1732,20 @@
     </Compile>
     <Compile Include="report\_reportTeamSaleIsBlocked.aspx.designer.cs">
       <DependentUpon>_reportTeamSaleIsBlocked.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="setting\_menu.aspx.cs">
+      <DependentUpon>_menu.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="setting\_menu.aspx.designer.cs">
+      <DependentUpon>_menu.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="setting\_menuPermission.aspx.cs">
+      <DependentUpon>_menuPermission.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="setting\_menuPermission.aspx.designer.cs">
+      <DependentUpon>_menuPermission.aspx</DependentUpon>
     </Compile>
     <Compile Include="user\_dashboardChangePassword.aspx.cs">
       <DependentUpon>_dashboardChangePassword.aspx</DependentUpon>
